# Car_Infotainment

./: .gitignore  .gitmodules  .qmlls.ini  CMakeLists.txt  README.md  pure-maps.md  resources.qrc
.github/workflows/: build.yml
Car_infotainmentContent/: App.qml  AppMenuGridView.qml  Main.qml  Screen01.ui.qml  Settings.qml  Taskbar.qml
compositor/: CMakeLists.txt
cpp-client/: cpp-client.pro
protocol/: custom.xml
src/: applauncher.cpp  appprovider.cpp  appprovider.h  climateprovider.cpp  climateprovider.h  languagemanager.cpp  languagemanager.h  main.cpp  settingsProvider.cpp  settingsProvider.h  volumeprovider.cpp  volumeprovider.h
translations/: app_de.ts
